fix the gap of the footer

--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -13,7 +13,7 @@ footer {
 
 .footer__list {
   padding: 0.2em 0em 2em 1.4em;
-  margin: 0 auto 2em;
+  margin: 0 2em;
   @media (min-width : 768px) {
     display: flex;
     padding: 1.2em 0em 2em 1.4em;
